src/main/InvoiceCreditMemo/objects/Order/fields/DR_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Customer_Type__c</fullName>
    <description>Indicates the Customer Type stamped on the Order</description>
    <inlineHelpText>Indicates the Customer Type stamped on the Order</inlineHelpText>
    <label>Digital River Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>individual</fullName>
            </value>
            <value>
                <fullName>business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>