src/main/InvoiceCreditMemo/objects/Order/fields/DR_Fraud_State__c.field-meta.xml
<CustomField>
    <fullName>DR_Fraud_State__c</fullName>
    <label>Digital River Fraud State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>blocked</fullName>
            </value>
            <value>
                <fullName>in_review</fullName>
            </value>
            <value>
                <fullName>passed</fullName>
            </value>
            <value>
                <fullName>review_opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>