src/main/InvoiceCreditMemo/objects/Order/fields/DR_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_Id__c</fullName>
    <description>DR order Id</description>
    <externalId>true</externalId>
    <label>Digital River Order Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>