src/main/InvoiceCreditMemo/objects/Order/fields/DR_Order_State__c.field-meta.xml
<CustomField>
    <fullName>DR_Order_State__c</fullName>
    <description>Digital River order states</description>
    <inlineHelpText>Digital River order states</inlineHelpText>
    <label>Digital River Order State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pending_payment</fullName>
            </value>
            <value>
                <fullName>in_review</fullName>
            </value>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>blocked</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>fulfilled</fullName>
            </value>
            <value>
                <fullName>complete</fullName>
            </value>
            <value>
                <fullName>returned</fullName>
            </value>
            <value>
                <fullName>salesforce_failure</fullName>
            </value> <value>
                <fullName>cancelled_by_sf</fullName>
            </value>
            <value>
                <fullName>cancelled_by_dr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>