src/main/InvoiceCreditMemo/objects/Order/fields/DR_Payment_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>DR_Payment_Failure_Reason__c</fullName>
    <description>Digital River Payment Failure Reason</description>
    <inlineHelpText>Digital River Payment Failure Reason</inlineHelpText>
    <label>DR Payment Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>