src/main/InvoiceCreditMemo/objects/Order/fields/DR_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>DR_Payment_Status__c</fullName>
    <description>Digital River Payment Status</description>
    <inlineHelpText>Digital River Payment Status</inlineHelpText>
    <label>DR Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>