src/main/InvoiceCreditMemo/objects/Order/fields/DR_SF_CartId__c.field-meta.xml
<CustomField>
    <fullName>DR_SF_CartId__c</fullName>
    <label>DR SF CartId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>