src/main/InvoiceCreditMemo/objects/Order/fields/DR_Tax_Identifiers__c.field-meta.xml
<CustomField>
    <fullName>DR_Tax_Identifiers__c</fullName>
    <description>Comma-separated list of Global Tax Identifiers that are applied to this Order</description>
    <inlineHelpText>Comma-separated list of Global Tax Identifiers that are applied to this Order</inlineHelpText>
    <label>Digital River Tax Identifiers</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>