src/main/InvoiceCreditMemo/objects/Order/fields/DR_Total_Duty__c.field-meta.xml
<CustomField>
    <fullName>DR_Total_Duty__c</fullName>
    <label>DR Total Duty</label>
    <summarizedField>OrderItem.DR_Duty__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>