src/main/InvoiceCreditMemo/objects/Order/fields/DR_Total_IOR_Tax__c.field-meta.xml
<CustomField>
    <fullName>DR_Total_IOR_Tax__c</fullName>
    <label>DR Total IOR Tax</label>
    <summarizedField>OrderItem.DR_IOR_Tax__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>