src/main/InvoiceCreditMemo/objects/Order/fields/DR_Total_Regulatory_Fee__c.field-meta.xml
<CustomField>
    <fullName>DR_Total_Regulatory_Fee__c</fullName>
    <label>DR Total Regulatory Fee</label>
    <summarizedField>OrderItem.DR_Regulatory_Fee__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>