src/main/InvoiceCreditMemo/objects/Order/fields/Has_Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Has_Landed_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Landed Cost</label>
    <type>Checkbox</type>
</CustomField>