src/main/InvoiceCreditMemo/objects/Order/fields/Recurring_Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Line_Item_Count__c</fullName>
    <description>Indicates the Number of Recurring Line Items in this Order</description>
    <inlineHelpText>Indicates the Number of Recurring Line Items in this Order</inlineHelpText>
    <label>Recurring Line Item Count</label>
    <summaryFilterItems>
        <field>OrderItem.Recurring_Line_Item__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>