src/main/InvoiceCreditMemo/objects/Order/fields/SF_Order_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>SF_Order_Failure_Reason__c</fullName>
    <label>SF Order Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>